@@ -1,9 +1,11 @@
 $ ->
   userFormatResult = (user) ->
-    avatar = gon.gravatar_url
-    avatar = avatar.replace('%{hash}', md5(user.email))
-    avatar = avatar.replace('%{size}', '24')
-
+    if user.avatar
+      avatar = user.avatar.url
+    else
+      avatar = gon.gravatar_url
+      avatar = avatar.replace('%{hash}', md5(user.email))
+      avatar = avatar.replace('%{size}', '24')
     markup = "<div class='user-result'>"
     markup += "<div class='user-image'><img class='avatar s24' src='" + avatar + "'></div>"
     markup += "<div class='user-name'>" + user.name + "</div>"
