@@ -37,4 +37,4 @@
             %i.icon-signout
         %li
           = link_to current_user, class: "profile-pic", id: 'profile-pic' do
-            = image_tag gravatar_icon(current_user.email, 26), alt: ''
+            = image_tag avatar_icon(current_user.email, 26), alt: ''
