@@ -35,7 +35,7 @@
               - @project.team.members.sort_by(&:name).each do |user|
                 %li
                   = link_to project_filter_path(assignee_id: user.id) do
-                    = image_tag gravatar_icon(user.email), class: "avatar s16", alt: ''
+                    = image_tag avatar_icon(user.email), class: "avatar s16", alt: ''
                     = user.name
 
           .dropdown.inline.prepend-left-10
