@@ -8,4 +8,4 @@
         = link_to_gfm truncate(issue.title, length: 40), [@project, issue]
         - if issue.assignee
           .pull-right
-            = image_tag gravatar_icon(issue.assignee.email, 16), class: "avatar s16"
+            = image_tag avatar_icon(issue.assignee.email, 16), class: "avatar s16"
