@@ -13,7 +13,7 @@
         = link_to project_note_path(@project, note), title: "Remove comment", method: :delete, confirm: 'Are you sure you want to remove this comment?', remote: true, class: "danger js-note-delete" do
           %i.icon-trash.cred
           Remove
-    = image_tag gravatar_icon(note.author_email), class: "avatar s32"
+    = image_tag avatar_icon(note.author_email), class: "avatar s32"
     = link_to_member(@project, note.author, avatar: false)
     %span.note-last-update
       = note_timestamp(note)
