@@ -9,7 +9,7 @@
           &nbsp;
         = link_to project_team_member_path(@project, user), confirm: remove_from_project_team_message(@project, user), method: :delete, class: "btn-tiny btn btn-remove", title: 'Remove user from team' do
           %i.icon-minus.icon-white
-  = image_tag gravatar_icon(user.email, 32), class: "avatar s32"
+  = image_tag avatar_icon(user.email, 32), class: "avatar s32"
   %p
     %strong= user.name
   %span.cgray= user.username
