@@ -1,5 +1,5 @@
 %h3.page-title
-  = image_tag gravatar_icon(@user.email), class: "avatar s24"
+  = image_tag avatar_icon(@user.email), class: "avatar s24"
   = @user.name
   %span
     \/
