@@ -1,7 +1,7 @@
 - user = member.user
 - return unless user
 %li{class: "#{dom_class(member)} js-toggle-container", id: dom_id(member)}
-  = image_tag gravatar_icon(user.email, 16), class: "avatar s16"
+  = image_tag avatar_icon(user.email, 16), class: "avatar s16"
   %strong= user.name
   %span.cgray= user.username
   - if user == current_user
