@@ -13,6 +13,7 @@ v 6.2.0
   - Rake tasks for web hooks management (Jonhnny Weslley)
   - Extended User API to expose admin and can_create_group for user creation/updating (Boyan Tabakov)
   - API: Remove group
+  - Avatar upload on profile page with a maximum of 200KB (Steven Thonus)
 
 v 6.1.0
   - Project specific IDs for issues, mr, milestones
